--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -32,7 +32,7 @@
     "where $\\mathbf{r} = (r_x, r_y, r_z)^T$, $I: \\mathbb{R}^2 \\rightarrow \\mathbb{R}$ is the image, $R \\in SO(3)$ is the unknown pose of the 3D protein volume, $g$ is a kernel modeling the microscope blurring effects, and $\\epsilon$ is pointwise noise. We call this projection function from the 3D volume to the 2D images $c: V \\rightarrow I$. An example of the 3D structure of a protein and multiple (synthetic) 2D images is shown in Figure 1.\n",
     "\n",
     "<div align=\"center\">\n",
-    "<img src=\"figures/projection-diagram.png\" width=\"300\" />\n",
+    "<img src=\"../figures/projection-diagram.png\" width=\"300\" />\n",
     "\n",
     "Figure 1\n",
     "</div>\n",
@@ -50,7 +50,7 @@
     "The state-of-the-art learning-based approach for cryo-EM reconstruction is cryoFIRE, which leverages a deep generative model of 3D structure from single-particle 2D images [1]. CryoFIRE adopts an image-to-pose encoder and pose-to-slice decoder architecture, and the model is specified in the Fourier domain to relate 2D images as planar slices in 3D volume as shown in Figure 2. This Fourier-based representation enables the model to efficiently capture detailed particle pose information from images. However, CryoFIRE infers a single pose from each image. To achieve high-resolution reconstructions, CryoFIRE still requires a large number of images, often in the order of hundreds of thousands. While CryoFIRE is capable of handling heterogeneous reconstructions, where the protein may exhibit different conformational changes across images, we will evaluate its efficacy in our homogeneous reconstruction setting, where we assume all 2D images capture the protein at the same conformational state.\n",
     "\n",
     "<div align=\"center\">\n",
-    "<img src=\"figures/cryofire.png\" width=\"500\" />\n",
+    "<img src=\"../figures/cryofire.png\" width=\"500\" />\n",
     "\n",
     "Figure 2\n",
     "</div>\n",
@@ -71,7 +71,7 @@
     "\n",
     "\n",
     "<div align=\"center\">\n",
-    "<img src=\"figures/method.png\" width=\"500\" />\n",
+    "<img src=\"../figures/method.png\" width=\"500\" />\n",
     "\n",
     "Figure 3\n",
     "</div>\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -169,20 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sparsity: 9245658/27000000 = 0.3424317777777778 \n"
+      "Sparsity of PDA representation: 9245658/27000000 = 0.3424317777777778 \n"
      ]
     }
    ],
    "source": [
     "# Data efficiency due to sparse representation\n",
-    "print(f\"Sparsity: {pda[0].size}/{edm.size} = {pda[0].size/edm.size} \")"
+    "print(f\"Sparsity of PDA representation: {pda[0].size}/{edm.size} = {pda[0].size/edm.size} \")"
    ]
   },
   {
@@ -200,12 +200,19 @@
    "outputs": [],
    "source": [
     "# load the PDA from the saved pickle\n",
-    "with open('pda.pickle', 'rb') as pda_file:\n",
+    "with open('../data/pda.pickle', 'rb') as pda_file:\n",
     "    pda = pickle.load(pda_file)\n",
     "\n",
     "shape = (512, 512)\n",
     "projection_dict = {}\n",
-    "m = 500"
+    "m = 500\n",
+    "\n",
+    "# generate projections\n",
+    "projection_dict['6bdf'] = proj.project_pda_to_image(pda, shape=shape, batch_size = m, blur_sigma=(2,2), noise_sigma=0.03)\n",
+    "\n",
+    "# save the generated projections\n",
+    "with open('../data/projections.pickle', 'wb') as proj_file:\n",
+    "    pickle.dump(projection_dict, proj_file)"
    ]
   },
   {
