--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,11 +140,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-=======
-   "execution_count": 10,
->>>>>>> 2354c604d996bf71ffd8900802f0d6ef0fa17f5f
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,11 +152,7 @@
     "normalized_edm = proj.normalize_edm(edm)\n",
     "\n",
     "# Generate the sparse point-density array\n",
-    "pda = proj.point_density_array(normalized_edm)\n",
-    "\n",
-    "# save the generated PDA\n",
-    "with open('../data/pda.pickle', 'wb') as pda_file:\n",
-    "    pickle.dump(pda, pda_file)"
+    "pda = proj.point_density_array(normalized_edm)"
    ]
   },
   {
@@ -173,11 +165,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-=======
-   "execution_count": 11,
->>>>>>> 2354c604d996bf71ffd8900802f0d6ef0fa17f5f
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,22 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We generate 500 orthographic projections from unknown orientations, adding Gaussian noise and blurring effects to simulate real experimental conditions. The generation and application of synthetic data in this manner for cryo-EM reconstruction algorithm development is common in prior work."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load the PDA from the saved pickle\n",
-    "with open('pda.pickle', 'rb') as pda_file:\n",
-    "    pda = pickle.load(pda_file)\n",
-    "\n",
-    "shape = (512, 512)\n",
-    "projection_dict = {}\n",
-    "m = 500"
+    "We generated 500 orthographic projections from unknown orientations, adding Gaussian noise and blurring effects to simulate real experimental conditions. The generation and application of synthetic data in this manner for cryo-EM reconstruction algorithm development is common in prior work."
    ]
   },
   {
