--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -327,9 +327,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " \n",
+    "We compare a sample projection $I$ (from the set of $m$ generated images) to a given ground truth pose $R$ by computing \n",
     "\n",
-    "We then squared each MSE value, multiplied by -0.0001, and took the exponential. This transformation was applied to produce separation between similar and dissimilar poses and encourage learning of symmetries. To generate a binary mask, the top 5% of the transformed values were labeled as 1, and the remaining were labeled as 0.\n",
+    "$$\n",
+    "\\text{Pr}[R \\, | \\, I] = e^{-\\lambda \\text{MSE}(I, c(RV))^2}\n",
+    "$$\n",
+    "\n",
+    "where $\\lambda$ is a tunable parameter. In our experiments, we used $\\lambda = -0.0001$. This transformation was applied to produce separation between similar and dissimilar poses and encourage learning of symmetries. To generate a binary mask, the top 5% of the transformed values were labeled as 1, and the remaining were labeled as 0."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "#### Model Building\n",
     "\n",
