--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -337,6 +337,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "def generate_bin_mask():\n",
+    "    \"\"\"\n",
+    "    This code is used to generate ground truth binary masks for training.\n",
+    "    \"\"\"\n",
+    "    img_shape = 512\n",
+    "    proj_per_img = 500\n",
+    "\n",
+    "    with open('../data/projections.pickle', 'rb') as pickle_file:\n",
+    "        projection_dict = pickle.load(pickle_file)\n",
+    "\n",
+    "    fmaps = torch.zeros((len(projection_dict.items()), proj_per_img, img_shape, img_shape))\n",
+    "\n",
+    "    for i in range(len(projection_dict.items())):\n",
+    "        pdb_id, projections = list(projection_dict.items())[i]\n",
+    "        for j in range(proj_per_img):\n",
+    "            fmap = projections[j]\n",
+    "            fmaps[i, j, :, :] = torch.from_numpy(fmap)\n",
+    "\n",
+    "    with open('../ground_truth/all.pickle', 'rb') as pickle_result:\n",
+    "        ground_truth = pickle.load(pickle_result)\n",
+    "    \n",
+    "    if not ground_truth:\n",
+    "        raise NotImplementedError(\"Missing ground truth data\")\n",
+    "    \n",
+    "    for i in range(len(ground_truth)):\n",
+    "        ground_truth[i] = torch.from_numpy(ground_truth[i])\n",
+    "    \n",
+    "    mses = torch.zeros((fmaps.shape[0], fmaps.shape[1], len(ground_truth)))\n",
+    "    \n",
+    "    for i in range(mses.shape[0]):\n",
+    "        for j in range(mses.shape[1]):\n",
+    "            fmap = fmaps[i,j,:,:]\n",
+    "            for k in range(mses.shape[2]):\n",
+    "                gt = ground_truth[k]\n",
+    "                mses[i,j,k] = ((gt - fmap)*(gt-fmap)).mean()\n",
+    "\n",
+    "    prob = torch.exp(-.0001*mses*mses)\n",
+    "    threshold_probs = np.repeat(np.expand_dims(np.expand_dims(np.array([torch.max(prob[0,i,:])-0.05 for i in range(fmaps.shape[1])]), axis=1).T, axis=2), self.prob.shape[2], axis=2)\n",
+    "    bin_mask = torch.where(prob > torch.from_numpy(threshold_probs), 1, 0)\n",
+    "\n",
+    "    return bin_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: this method assumes that sample projections have been generated a\n",
+    "# along with ground truth images. These files are not pre-included into the \n",
+    "# repository because they are extremely large (total size > 1GB) and generating \n",
+    "# takes several hours. However, we have inlcuded bin_mask.pickle, since this\n",
+    "# file is not very large. So, you should be able to continue this notebook \n",
+    "# without running this cell.\n",
+    "bin_mask = generate_bin_mask()\n",
+    "\n",
+    "with open(\"../data/bin_mask.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(bin_mask, f)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -344,15 +414,243 @@
     "\n",
     "#### Model Building\n",
     "\n",
-    "The model architecture consists of three parts – a convolutional network which takes input 2D projection images and outputs a 2D feature map, a projector onto half-sphere, and a spherical convolutional network to output the probability distribution. Specifically, the initial CNN consists of two Conv2d layers and ReLU activation, and the half-sphere projector applies a depthwise convolution operation. The sCNN learns a signal over SO(3) with S2 convolution, SO(3) activation, and SO(3) convolution.\n",
+    "The model architecture consists of three parts – a convolutional network which takes input 2D projection images and outputs a 2D feature map, a projector onto half-sphere, and a spherical convolutional network to output the probability distribution. Specifically, the initial CNN consists of two Conv2d layers and ReLU activation, and the half-sphere projector applies a depthwise convolution operation. The sCNN learns a signal over $SO(3)$ with S2 convolution, $SO(3)$ activation, and $SO(3)$ convolution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnn\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbinary_label_metrics\u001b[39;00m \u001b[39mimport\u001b[39;00m BinaryLabelMetrics\n\u001b[0;32m      8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmodel\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmodel\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpredictor\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpredictor\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\devch\\Documents\\6.S966\\project\\cryo_reconstruction\\src\\binary_label_metrics.py:12\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m     13\u001b[0m     roc_auc_score,\n\u001b[0;32m     14\u001b[0m     average_precision_score,\n\u001b[0;32m     15\u001b[0m     confusion_matrix,\n\u001b[0;32m     16\u001b[0m     f1_score,\n\u001b[0;32m     17\u001b[0m )\n\u001b[0;32m     20\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mBinaryLabelMetrics\u001b[39;00m:\n\u001b[0;32m     21\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[39m    :param num_thresh: Number of thresholds equally spaced between [0,1] at\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[39m        which the confusion matrix is computed. Default is 1001. Setting to an\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[39m        odd number creates more even splits between 0 and 1.\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[39m    :type num_thresh: int, optional\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import e3nn\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "from binary_label_metrics import BinaryLabelMetrics\n",
+    "import model as model\n",
+    "import predictor as predictor\n",
+    "import so3_utils\n",
+    "\n",
+    "class CustomBCELoss(nn.Module):\n",
+    "    \"\"\"\n",
+    "    This is the custom BCE loss function used for training the model.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        super(CustomBCELoss, self).__init__()\n",
+    "\n",
+    "        with open(\"../data/bin_mask.pickle\", \"rb\") as f:\n",
+    "            self.bin_mask = pickle.load(f)\n",
+    "            self.bin_mask = self.bin_mask.cuda()\n",
+    "    \n",
+    "    def forward(self, fmap_idx, probabilities, idx, epoch_num):\n",
+    "        p = probabilities[0].float()\n",
+    "        loss = torch.nn.BCELoss()\n",
+    "        # if epoch_num % 50 == 0 and idx % 10 == 0:\n",
+    "        #     visualize_maps(p, self.bin_mask[fmap_idx[0],fmap_idx[1]].float(), idx, epoch_num)\n",
+    "        return  loss(p, self.bin_mask[fmap_idx[0],fmap_idx[1]].float())\n",
+    "\n",
+    "class Encoder(nn.Module):\n",
+    "    \"\"\"\n",
+    "    This is our encoder model, which takes a 2D projection as input \n",
+    "    \"\"\"\n",
+    "    def __init__(self, args):\n",
+    "        super().__init__()\n",
+    "        self.blm = BinaryLabelMetrics()\n",
+    "\n",
+    "        self.featurizer = nn.Sequential(\n",
+    "            nn.Conv2d(1, 3, 5, 2),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(3, 5, 5, 2)\n",
+    "        ).cuda()\n",
+    "\n",
+    "        lmax=args.lmax\n",
+    "        s2_fdim=args.sphere_fdim\n",
+    "        so3_fdim_1 = 64\n",
+    "        s2_kernel_grid = so3_utils.s2_healpix_grid(max_beta=np.inf, rec_level=2)\n",
+    "        so3_kernel_grid = so3_utils.so3_near_identity_grid()\n",
+    "\n",
+    "        so3_kernel_grid = so3_utils.so3_near_identity_grid()\n",
+    "        self.layers = nn.Sequential(\n",
+    "            model.S2Convolution(s2_fdim, so3_fdim_1, lmax, s2_kernel_grid),\n",
+    "            e3nn.nn.SO3Activation(lmax, lmax, act=torch.relu, resolution=10),\n",
+    "            nn.BatchNorm1d(165),\n",
+    "            model.SO3Convolution(so3_fdim_1, 1, lmax, so3_kernel_grid),\n",
+    "        ).cuda()\n",
+    "\n",
+    "        self.projector = model.Image2SphereProjector(fmap_shape=(5,125, 125), sphere_fdim=args.sphere_fdim, lmax=args.lmax)\n",
+    "\n",
+    "        output_xyx = so3_utils.so3_healpix_grid(rec_level=2).cuda() # rec_level is resolution\n",
+    "        self.sphere_grid = output_xyx\n",
+    "        self.eval_wigners = so3_utils.flat_wigner(lmax, *output_xyx).transpose(0,1).cuda() # for probability calculation\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # x is 2D orthographic projection\n",
+    "        \n",
+    "        # Initial 2d convolutional layers for feature extraction \n",
+    "        feat = self.featurizer(x.cuda())\n",
+    "\n",
+    "        # project onto half-sphere\n",
+    "        proj = self.projector(feat[0].cpu())[0,:,:].cuda()\n",
+    "\n",
+    "        # spherical harmonic layers\n",
+    "        harmonics = self.layers(proj)\n",
+    "\n",
+    "        probabilities = self.compute_probabilities(harmonics) #[1,4608]\n",
+    "        return probabilities\n",
+    "    \n",
+    "    def compute_probabilities(self, harmonics):\n",
+    "        ''' compute probabilities over grid resulting from SO(3) group convolution'''\n",
+    "        probs = torch.matmul(harmonics, self.eval_wigners).squeeze(1)\n",
+    "        return nn.Sigmoid()(probs)\n",
+    "        # return nn.Softmax(dim=1)(probs)\n",
+    "\n",
+    "    def position_to_pose(self, indices):\n",
+    "        # tensor of indices (N,)\n",
+    "        # returns tensor of size (N,3) where each index has alpha, beta, gamma\n",
+    "        # total depends on rec_level (resolution = 2, 4608 points, bin width = 15 degrees)\n",
+    "        return self.sphere_grid[:,indices]\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "#### Model Training\n",
     "\n",
-    "The model was trained using a binary cross entropy loss between the predicted probability distribution and the ground truth binary mask. The spherical equivariant layers use a lmax = 4, and the model was trained with learning rate 0.001 for 200 epochs.\n",
+    "The model was trained using a binary cross entropy loss between the predicted probability distribution and the ground truth binary mask. The spherical equivariant layers use a lmax = 4, and the model was trained with learning rate 0.001 for 200 epochs. Our full training loop is in `train.py`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "#### Experiments\n",
+    "### Experiments\n",
     "\n",
-    "First, we ran an experiment to test how the number of training images affects output probability distributions. With 50, 100, 200, and 400 training images, we recorded train ROC and precision-recall after 200 epochs. Results are shown in Table 1."
+    "First, we ran an experiment to test how the number of epochs affects predicted probability distribution. As shown in Figure 4, the sparsity of the distribution increases considerably in the first epochs and gains further structure as epochs progress.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"../figures/epoch_experiment.png\" width=\"1000\" />\n",
+    "\n",
+    "Figure 4\n",
+    "</div>\n",
+    "\n",
+    "We then ran an experiment to assess how the number of training images affects output probability distributions. With 50, 100, 200, and 400 training images, we recorded train ROC and precision-recall after 200 epochs. Results are shown in Table 1. A particular dip in performance is observed when training with 200 images, indicating that at this point, the model is not small enough to overfit within 200 epochs. Yet, it has not seen enough examples to learn a generalizable functional form.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"../figures/experiment_table.png\" width=\"500\" />\n",
+    "\n",
+    "Table 1\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While a clear trend is not observed with these metrics, a more informative trajectory can be seen with this example, a randomly selected data point from the validation set. Figure 5 shows the ground truth and predicted probability distributions for the four models.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"../figures/num_images_experiment.png\" width=\"500\" />\n",
+    "\n",
+    "Figure 5\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The predicted distribution from the 400 image model has the lowest MSE, showing that training with more images improves generalization. As shown in the above example, the predicted distribution resembles the ground truth distribution on some criteria, and has difficulty. Qualitatively, we see that the green colored arch in the top half of the visualized 2D sphere is also observed in the ground truth distribution. The yellow-to-green gradient across the arch is maintained, indicating that a somewhat correct symmetry is captured in 3D.\n",
+    "\n",
+    "More generally, the ROC and precision-recall curve for epoch 200 with 400 training images is shown in Figure 6.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"../figures/rocpr.png\" width=\"800\" />\n",
+    "\n",
+    "Figure 6\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The distribution of predicted scores are shown in Figure 7. The mean predicted score of true positive labels is 0.14, while the mean predicted score of predicted positive labels is 0.02. The histogram also shows the class imbalance between positive and negative labels, contributing to the complexity of the task.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"../figures/histogram.png\" width=\"800\" />\n",
+    "\n",
+    "Figure 7\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then tested our predicted probability distributions for equivariance, both qualitatively and quantitatively. Figure 8 shows a qualitative analysis – the predicted distributions are evidently reflective of the inherent symmetry displayed in the 2D projection images.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"../figures/qualitative_equivariance.png\" width=\"800\" />\n",
+    "\n",
+    "Figure 8\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quantitatively, "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions\n",
+    "\n",
+    "Our experiments show that equivariant methods can be used to learn protein symmetries from 2D images. This is shown both qualitatively and quantitatively, by the relation between rotations before imaging and rotations across the probability map. Although learning against a ground truth probability map is unstable, this can be rectified by using binary masks with carefully chosen thresholds. \n",
+    "\n",
+    "In general, while certain artifacts of the ground truth probability mask were learned successfully, probability masks were not fully predicted accurately in validation. This may be because a more complex functional form or a greater number of training images are needed. However, computational expense posed a limitation to try these settings. The smaller model may cause the learned function to not generalize to proteins with symmetries not seen during training. Another limitation arises from the synthetic projection images which may provide biased benchmarks, and it is difficult to test on real cryo-EM data (petabytes of storage).\n",
+    "\n",
+    "In the future, we plan to integrate our pose estimation model with reconstruction using Fourier Slice Theorem. We also plan to increase the resolution used for both images and the spherical CNN to improve the granularity of predicted probability maps and (eventually) reconstruction. Once the homogenous setting is successfully learned, we hope to explore applications of symmetry to the heterogeneous reconstruction setting, perhaps detecting symmetry-breaking events to predict conformational change.\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "[1]  Levy, A. & Wetzstein, G. & Martel, J. & Poitevin, F. & Zhong, E. (2022). Amortized Inference for Heterogeneous Reconstruction in Cryo-EM. Neural Information Processing Systems.\n",
+    "\n",
+    "[2] Lian, R. & Huang, B. & Wang, L. & Liu, Q. & Lin, Y. & Ling, H. (2022). End-to-end orientation estimation from 2D cryo-EM images. International Union of Crystallography.\n",
+    "\n",
+    "[3] Klee, D. & Biza, O. & Platt, R. & Walters, R. (2023). Image to Sphere: Learning Equivariant Features for Efficient Pose Prediction. International Conference on Learning Representations."
    ]
   },
   {
