--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -15,6 +15,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Instructions\n",
+    "\n",
+    "Please unzip processed_dataset.pickle.zip before running code. Some cells take considerably long to run or may require cuda resources. In these cases, this is noted in surrounding comments. Our final trained model is saved as data/model_epoch_200.pt."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Introduction\n",
     "\n",
     "Cryo-electron microscopy (cryo-EM) is a powerful imaging technique that has transformed structural biology research by enabling high-resolution 3D reconstructions of complex biological macromolecules such as proteins. The process involves collecting tens of thousands of 2D images in a single run, which are then processed using specialized software to generate a detailed 3D model of electron density. One of the key challenges with cryo-EM is that the poses (i.e. 3D orientations) of the 2D images are not known when the images are taken, and so much work revolves around determining the poses of cryo-EM images. \n",
