--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -342,12 +342,10 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
-    "def generate_bin_mask():\n",
+    "def generate_bin_mask(img_shape = 512, proj_per_img = 500):\n",
     "    \"\"\"\n",
     "    This code is used to generate ground truth binary masks for training.\n",
     "    \"\"\"\n",
-    "    img_shape = 512\n",
-    "    proj_per_img = 500\n",
     "\n",
     "    with open('../data/projections.pickle', 'rb') as pickle_file:\n",
     "        projection_dict = pickle.load(pickle_file)\n",
@@ -437,7 +435,6 @@
     "\n",
     "from binary_label_metrics import BinaryLabelMetrics\n",
     "import model as model\n",
-    "import predictor as predictor\n",
     "import so3_utils\n",
     "\n",
     "class CustomBCELoss(nn.Module):\n",
