fix bin_mask code

--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -395,16 +395,7 @@
     "# takes several hours. However, we have inlcuded bin_mask.pickle, since this\n",
     "# file is not very large. So, you should be able to continue this notebook \n",
     "# without running this cell.\n",
-    "bin_mask = generate_bin_mask()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bin_mask=None\n",
+    "bin_mask = generate_bin_mask()\n",
     "with open(\"../data/bin_mask.pickle\", \"wb\") as f:\n",
     "    pickle.dump(bin_mask, f)"
    ]
