--- a/src/computational_essay.ipynb
+++ b/src/computational_essay.ipynb
@@ -344,7 +344,7 @@
     "\n",
     "def generate_bin_mask(img_shape = 512, proj_per_img = 500):\n",
     "    \"\"\"\n",
-    "    This code is used to generate ground truth binary masks for training.\n",
+    "    Used to generate ground truth binary masks for training.\n",
     "    \"\"\"\n",
     "\n",
     "    with open('../data/projections.pickle', 'rb') as pickle_file:\n",
@@ -448,7 +448,8 @@
     "\n",
     "class Encoder(nn.Module):\n",
     "    \"\"\"\n",
-    "    This is our encoder model, which takes a 2D projection as input \n",
+    "    CryoSphere encoder model, which takes a 2D projection as input \n",
+    "    and returns a probability map over SO(3) poses.\n",
     "    \"\"\"\n",
     "    def __init__(self, args):\n",
     "        super().__init__()\n",
@@ -499,7 +500,6 @@
     "        ''' compute probabilities over grid resulting from SO(3) group convolution'''\n",
     "        probs = torch.matmul(harmonics, self.eval_wigners).squeeze(1)\n",
     "        return nn.Sigmoid()(probs)\n",
-    "        # return nn.Softmax(dim=1)(probs)\n",
     "\n",
     "    def position_to_pose(self, indices):\n",
     "        # tensor of indices (N,)\n",
